Added option to apply sorting to all sub-forums

--- a/kasimi/sorttopics/adm/style/event/acp_forums_normal_settings_append.html
+++ b/kasimi/sorttopics/adm/style/event/acp_forums_normal_settings_append.html
@@ -6,3 +6,10 @@
 	<dt><label>{L_SORTTOPICS_SORT_TOPICS_ORDER}{L_COLON}</label><br /><span>{L_SORTTOPICS_SORT_TOPICS_ORDER_EXPLAIN}</span></dt>
 	<dd>{S_SORTTOPICS_ORDER_OPTIONS}</dd>
 </dl>
+<dl>
+	<dt><label>{L_SORTTOPICS_APPLY_TO_SUBFORUMS}{L_COLON}</label><br /><span>{L_SORTTOPICS_APPLY_TO_SUBFORUMS_EXPLAIN}</span></dt>
+	<dd>
+		<label><input type="radio" class="radio" name="sort_topics_subforums" value="1"/> {L_YES}</label>
+		<label><input type="radio" class="radio" name="sort_topics_subforums" value="0" id="sort_topics_subforums" checked="checked" /> {L_NO}</label>
+	</dd>
+</dl>
