--- a/kasimi/sorttopics/adm/style/event/acp_forums_custom_settings.html
+++ b/kasimi/sorttopics/adm/style/event/acp_forums_custom_settings.html
@@ -10,7 +10,7 @@
 			<dd>{S_SORTTOPICS_ORDER_OPTIONS}</dd>
 		</dl>
 		<dl>
-			<dt><label>{L_SORTTOPICS_APPLY_TO_SUBFORUMS}{L_COLON}</label><br /><span>{L_SORTTOPICS_APPLY_TO_SUBFORUMS_EXPLAIN}</span></dt>
+			<dt><label for="sort_topics_subforums">{L_SORTTOPICS_APPLY_TO_SUBFORUMS}{L_COLON}</label><br /><span>{L_SORTTOPICS_APPLY_TO_SUBFORUMS_EXPLAIN}</span></dt>
 			<dd>
 				<label><input type="radio" class="radio" name="sort_topics_subforums" value="1"/> {L_YES}</label>
 				<label><input type="radio" class="radio" name="sort_topics_subforums" value="0" id="sort_topics_subforums" checked="checked" /> {L_NO}</label>
