--- a/kasimi/sorttopics/adm/style/event/acp_forums_custom_settings.html
+++ b/kasimi/sorttopics/adm/style/event/acp_forums_custom_settings.html
@@ -1,5 +1,6 @@
 <div id="forum_move_topics_when_locked_options">
 	<fieldset>
+		<legend>{L_SORTTOPICS_TITLE}</legend>
 		<dl>
 			<dt><label>{L_SORTTOPICS_SORT_TOPICS_BY}{L_COLON}</label><br /><span>{L_SORTTOPICS_SORT_TOPICS_BY_EXPLAIN}</span></dt>
 			<dd>{S_SORTTOPICS_BY_OPTIONS}</dd>
