--- a/kasimi/sorttopics/adm/style/event/acp_forums_custom_settings.html
+++ b/kasimi/sorttopics/adm/style/event/acp_forums_custom_settings.html
@@ -1,19 +1,19 @@
 <div id="forum_move_topics_when_locked_options">
 	<fieldset>
-		<legend>{L_SORTTOPICS_TITLE}</legend>
+		<legend>{{ lang('SORTTOPICS_TITLE') }}</legend>
 		<dl>
-			<dt><label>{L_SORTTOPICS_SORT_TOPICS_BY}{L_COLON}</label><br /><span>{L_SORTTOPICS_SORT_TOPICS_BY_EXPLAIN}</span></dt>
-			<dd>{S_SORTTOPICS_BY_OPTIONS}</dd>
+			<dt><label>{{ lang('SORTTOPICS_SORT_TOPICS_BY') ~ lang('COLON') }}</label><br /><span>{{ lang('SORTTOPICS_SORT_TOPICS_BY_EXPLAIN') }}</span></dt>
+			<dd>{{ S_SORTTOPICS_BY_OPTIONS }}</dd>
 		</dl>
 		<dl>
-			<dt><label>{L_SORTTOPICS_SORT_TOPICS_ORDER}{L_COLON}</label><br /><span>{L_SORTTOPICS_SORT_TOPICS_ORDER_EXPLAIN}</span></dt>
-			<dd>{S_SORTTOPICS_ORDER_OPTIONS}</dd>
+			<dt><label>{{ lang('SORTTOPICS_SORT_TOPICS_ORDER') ~ lang('COLON') }}</label><br /><span>{{ lang('SORTTOPICS_SORT_TOPICS_ORDER_EXPLAIN') }}</span></dt>
+			<dd>{{ S_SORTTOPICS_ORDER_OPTIONS }}</dd>
 		</dl>
 		<dl>
-			<dt><label for="sort_topics_subforums">{L_SORTTOPICS_APPLY_TO_SUBFORUMS}{L_COLON}</label><br /><span>{L_SORTTOPICS_APPLY_TO_SUBFORUMS_EXPLAIN}</span></dt>
+			<dt><label for="sort_topics_subforums">{{ lang('SORTTOPICS_APPLY_TO_SUBFORUMS') ~ lang('COLON') }}</label><br /><span>{{ lang('SORTTOPICS_APPLY_TO_SUBFORUMS_EXPLAIN') }}</span></dt>
 			<dd>
-				<label><input type="radio" class="radio" name="sort_topics_subforums" value="1"/> {L_YES}</label>
-				<label><input type="radio" class="radio" name="sort_topics_subforums" value="0" id="sort_topics_subforums" checked="checked" /> {L_NO}</label>
+				<label><input type="radio" class="radio" name="sort_topics_subforums" value="1"/> {{ lang('YES') }}</label>
+				<label><input type="radio" class="radio" name="sort_topics_subforums" value="0" id="sort_topics_subforums" checked="checked" /> {{ lang('NO') }}</label>
 			</dd>
 		</dl>
 	</fieldset>
