Added type declarations

--- a/kasimi/sorttopics/adm/style/event/acp_forums_custom_settings.html
+++ b/kasimi/sorttopics/adm/style/event/acp_forums_custom_settings.html
@@ -2,18 +2,18 @@
 	<fieldset>
 		<legend>{{ lang('SORTTOPICS_TITLE') }}</legend>
 		<dl>
-			<dt><label>{{ lang('SORTTOPICS_SORT_TOPICS_BY') ~ lang('COLON') }}</label><br /><span>{{ lang('SORTTOPICS_SORT_TOPICS_BY_EXPLAIN') }}</span></dt>
+			<dt><label>{{ lang('SORTTOPICS_SORT_TOPICS_BY') ~ lang('COLON') }}</label><br<span>{{ lang('SORTTOPICS_SORT_TOPICS_BY_EXPLAIN') }}</span></dt>
 			<dd>{{ S_SORTTOPICS_BY_OPTIONS }}</dd>
 		</dl>
 		<dl>
-			<dt><label>{{ lang('SORTTOPICS_SORT_TOPICS_ORDER') ~ lang('COLON') }}</label><br /><span>{{ lang('SORTTOPICS_SORT_TOPICS_ORDER_EXPLAIN') }}</span></dt>
+			<dt><label>{{ lang('SORTTOPICS_SORT_TOPICS_ORDER') ~ lang('COLON') }}</label><br><span>{{ lang('SORTTOPICS_SORT_TOPICS_ORDER_EXPLAIN') }}</span></dt>
 			<dd>{{ S_SORTTOPICS_ORDER_OPTIONS }}</dd>
 		</dl>
 		<dl>
-			<dt><label for="sort_topics_subforums">{{ lang('SORTTOPICS_APPLY_TO_SUBFORUMS') ~ lang('COLON') }}</label><br /><span>{{ lang('SORTTOPICS_APPLY_TO_SUBFORUMS_EXPLAIN') }}</span></dt>
+			<dt><label for="sort_topics_subforums">{{ lang('SORTTOPICS_APPLY_TO_SUBFORUMS') ~ lang('COLON') }}</label><br><span>{{ lang('SORTTOPICS_APPLY_TO_SUBFORUMS_EXPLAIN') }}</span></dt>
 			<dd>
-				<label><input type="radio" class="radio" name="sort_topics_subforums" value="1"/> {{ lang('YES') }}</label>
-				<label><input type="radio" class="radio" name="sort_topics_subforums" value="0" id="sort_topics_subforums" checked="checked" /> {{ lang('NO') }}</label>
+				<label><input type="radio" class="radio" name="sort_topics_subforums" value="1"> {{ lang('YES') }}</label>
+				<label><input type="radio" class="radio" name="sort_topics_subforums" value="0" id="sort_topics_subforums" checked="checked"> {{ lang('NO') }}</label>
 			</dd>
 		</dl>
 	</fieldset>
