--- a/kasimi/sorttopics/adm/style/acp_sorttopics.html
+++ b/kasimi/sorttopics/adm/style/acp_sorttopics.html
@@ -5,18 +5,18 @@
 <form id="acp_board" method="post" action="{{ U_ACTION }}">
 	<fieldset>
 		<dl>
-			<dt><label for="sorttopics_ucp_enabled">{{ lang('SORTTOPICS_UCP_ENABLED') ~ lang('COLON') }}</label><br /><span>{{ lang('SORTTOPICS_UCP_ENABLED_EXPLAIN') }}</span></dt>
+			<dt><label for="sorttopics_ucp_enabled">{{ lang('SORTTOPICS_UCP_ENABLED') ~ lang('COLON') }}</label><br><span>{{ lang('SORTTOPICS_UCP_ENABLED_EXPLAIN') }}</span></dt>
 			<dd>
-				<label><input type="radio" class="radio" name="sorttopics_ucp_enabled" value="1" id="sorttopics_ucp_enabled"{{ SORTTOPICS_UCP_ENABLED ? ' checked="checked"' : '' }}/> {{ lang('YES') }}</label>
-				<label><input type="radio" class="radio" name="sorttopics_ucp_enabled" value="0"{{ not SORTTOPICS_UCP_ENABLED ? ' checked="checked"' : '' }} /> {{ lang('NO') }}</label>
+				<label><input type="radio" class="radio" name="sorttopics_ucp_enabled" value="1" id="sorttopics_ucp_enabled"{{ SORTTOPICS_UCP_ENABLED ? ' checked="checked"' }}> {{ lang('YES') }}</label>
+				<label><input type="radio" class="radio" name="sorttopics_ucp_enabled" value="0"{{ not SORTTOPICS_UCP_ENABLED ? ' checked="checked"' }}> {{ lang('NO') }}</label>
 			</dd>
 		</dl>
 	</fieldset>
 	<fieldset>
 		<legend>{{ lang('ACP_SUBMIT_CHANGES') }}</legend>
 		<p class="submit-buttons">
-			<input class="button1" type="submit" id="submit" name="submit" value="{{ lang('SUBMIT') }}" />&nbsp;
-			<input class="button2" type="reset" id="reset" name="reset" value="{{ lang('RESET') }}" />
+			<input class="button1" type="submit" id="submit" name="submit" value="{{ lang('SUBMIT') }}">&nbsp;
+			<input class="button2" type="reset" id="reset" name="reset" value="{{ lang('RESET') }}">
 		</p>
 		{{ S_FORM_TOKEN }}
 	</fieldset>
